istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
---
