istio/istio-ikou.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "*.example.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: yuriacats
    hostname: "*.yuriacats.net"
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: home
    protocol: HTTPS
    port: 443
    hostname: "*.home"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: growi-home-tls
    allowedRoutes:
      namespaces:
        from: All
  - name: yuchiki
    hostname: "*.yuchiki.net"
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
