istio/istio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  listeners:
  - name: yuriacats
    hostname: "*.yuriacats.net"
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: home
    protocol: HTTPS
    port: 443
    hostname: "*.home"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: yurichiki-server-home-tls
    allowedRoutes:
      namespaces:
        from: All
  - name: yuchiki
    hostname: "*.yuchiki.net"
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: yurichiki
    hostname: "*.yurichiki.click"
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: local-yurichiki
    protocol: HTTPS
    hostname: "*.local.yurichiki.click"
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: yurichiki-server-local-tls
